--- a/tdsm-core/WebInterface/Files/index.html
+++ b/tdsm-core/WebInterface/Files/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js" defer async></script>
+    <!--<script src="https://code.jquery.com/jquery-2.1.3.min.js" defer async></script>-->
+    <script src="jquery-2.1.3.min.js" defer async></script>
     <script src="tdsm.framework.js" defer async></script>
     <script src="tdsm.interface.js" defer async></script>
     <script src="tdsm.net.js" defer async></script>
