Finalised heartbeat and is now every 5 minutes. Started again on the web server Added a unique connection log

--- a/tdsm-core/WebInterface/Files/index.html
+++ b/tdsm-core/WebInterface/Files/index.html
@@ -23,7 +23,29 @@
             <label for="LoginPassword">Password</label>
             <input type="password" id="LoginPassword" value="testing" />
             <button class="button-common">Login</button>
+            <span class="ui-error"></span>
         </div>
+    </section>
+    <section id="AdminInterface" class="ui-window">
+        <nav>
+            <ul>
+                <li>
+                    <a>
+                        Server Overview
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Chat
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        Configuration
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </section>
 
     <!-- Get modernizr once completed (using a custom build) -->
