Began web interface

--- a/tdsm-core/WebInterface/Files/index.html
+++ b/tdsm-core/WebInterface/Files/index.html
@@ -29,7 +29,7 @@
     <section id="AdminInterface" class="ui-window">
         <nav>
             <ul>
-                <li>
+                <!--<li>
                     <a>
                         Server Overview
                     </a>
@@ -43,9 +43,10 @@
                     <a>
                         Configuration
                     </a>
-                </li>
+                </li>-->
             </ul>
         </nav>
+        <div></div>
     </section>
 
     <!-- Get modernizr once completed (using a custom build) -->
