The gist of server overview [RAWS]

--- a/tdsm-core/WebInterface/Files/index.html
+++ b/tdsm-core/WebInterface/Files/index.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <header></header>
+    <header><span></span></header>
     <section id="InterfaceWindow" class="ui-window">
         <nav></nav>
         <div>
