--- a/tdsm-web/Web/interface/index.html
+++ b/tdsm-web/Web/interface/index.html
@@ -6,6 +6,7 @@
 
 		<!-- Load resources -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="/web/interface/css/style.css">
 	</head>
 	<body>
